[tool.poetry]
authors = ["Jeff Hutchison <jeff@jeffhutchison.com>"]
description = "Deadeye admin console back-end"
license = "MIT"
name = "deadeye"
version = "22.2.0"  # updated by scripts/bump.py

[tool.poetry.scripts]
deadeye = "deadeye.scripts.cli:main"
deadeye-server = "deadeye.scripts.server:main"

[tool.poetry.dependencies]
click = "~8.0"
eventlet = "~0.32"
flask = "~2.0"
flask-socketio = "~5.1"
pynetworktables = "~2021.0"
python = "^3.6"
python-dotenv = "^0.18"

[tool.poetry.dev-dependencies]
black = "*"
pylint = "*"
rope = "*"
watchdog = "^2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
