[tool.poetry]
name = "deadeye-ansible"
version = "0.1.0"
description = "Deadeye provisioning Ansible playbooks"
authors = ["Jeff Hutchison <jeff@jeffhutchison.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
