[tool.poetry]
authors = ["Jeff Hutchison <jeff@jeffhutchison.com>"]
description = "Deadeye provisioning Ansible playbooks"
license = "MIT"
name = "deadeye-ansible"
version = "0.1.0"

[tool.poetry.dependencies]
ansible = "^5.2"
ansible-lint = {extras = ["yamllint"], version = "^5.3"}
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
